<resources>
    <string name="app_name">Language</string>
    <string name="hintName">Name</string>
    <string name="hintPass">Password</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>
    <string name="txtLogin">Login</string>
    <string name="btnEL">English</string>
    <string name="btnVN">VietNamese</string>
    <string name="txtSet">Set Languege</string>

</resources>
